[ADD] enterprise to addons_path

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,7 +1,7 @@
 [options]
 
 # BASE ODOO
-addons_path = /mnt/aselcis,/mnt/aselcis-addons,/mnt/extra-addons
+addons_path = /mnt/aselcis,/mnt/aselcis-addons,/mnt/extra-addons,/mnt/enterprise
 data_dir = /var/lib/odoo
 admin_passwd = ${password('odoo')}
 csv_internal_sep = ,
