[ADD] new props

--- a/asoo.yml
+++ b/asoo.yml
@@ -33,7 +33,9 @@ environment_info:
   application: 'odoo'
   application_version: '11.0'
   application_service: 'web'
+  application_container_user: '0'
   git_submodule_path: 'addons'
+  addons_dir: '/mnt'
   nginx_service: 'web'
   nginx_virtual_port: '8069'
   odoo_config: 'config/odoo.conf'
@@ -47,6 +49,7 @@ environment_installation:
       commands:
         - 'chmod 655 entrypoint.sh'
 environment_test_info:
+  test_mute: true
   test_error_regex: '^(?:\d{4}-\d\d-\d\d \d\d:\d\d:\d\d,\d{3} \d+ (?:ERROR|CRITICAL) )|(?:Traceback \(most recent call last\):)$'
   test_warn_regex: '^\d{4}-\d\d-\d\d \d\d:\d\d:\d\d,\d{3} \d+ WARNING '
   script_test:
