--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,7 @@
 	path = addons/OCA/community-data-files
 	url = https://github.com/OCA/community-data-files.git
 	branch = 12.0
+[submodule "addons/OCA/multi-company"]
+	path = addons/OCA/multi-company
+	url = https://github.com/OCA/multi-company.git
+	branch = 12.0
