--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,7 @@
 	path = addons/OCA/account-financial-tools
 	url = https://github.com/OCA/account-financial-tools.git
 	branch = 11.0
+[submodule "addons/Aselcis-Consulting/asoo-tools"]
+	path = addons/Aselcis-Consulting/asoo-tools
+	url = https://github.com/Aselcis-Consulting/asoo-tools.git
+	branch = 11.0
