[ADD] modify asoo.yml

--- a/asoo.yml
+++ b/asoo.yml
@@ -1,6 +1,6 @@
-# deploy_info:
-#   private_submodules:
-#     - git@github.com:Aselcis-Consulting/enterprise.git
+deploy_info:
+  private_submodules:
+    - git@github.com:Aselcis-Consulting/enterprise.git
 
 server_setup:
   update:
