[UPDATE] docker-compose installation

--- a/asoo.yml
+++ b/asoo.yml
@@ -20,7 +20,8 @@ server_setup:
   docker-compose:
     sudo: true
     commands:
-      - 'apt -y install docker-compose'
+      - 'curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose'
+      - 'chmod +x /usr/local/bin/docker-compose'
   workspace-chmod:
     sudo: true
     commands:
