--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,7 @@
 	path = addons/OCA/server-tools
 	url = https://github.com/OCA/server-tools.git
 	branch = 13.0
+[submodule "addons/enterprise"]
+	path = addons/enterprise
+	url = git@github.com:Aselcis-Consulting/enterprise.git
+	branch = 13.0
