--- a/asoo.yml
+++ b/asoo.yml
@@ -1,3 +1,7 @@
+deploy_info:
+  private_submodules:
+    - git@github.com:Aselcis-Consulting/enterprise.git
+
 server_setup:
   update:
     sudo: true
