--- a/.gitmodules
+++ b/.gitmodules
@@ -154,3 +154,7 @@
 	path = addons/OCA/server-tools
 	url = https://github.com/OCA/server-tools.git
 	branch = 13.0
+[submodule "addons/Aselcis-Consulting/asoo-tools"]
+	path = addons/Aselcis-Consulting/asoo-tools
+	url = https://github.com/Aselcis-Consulting/asoo-tools.git
+	branch = 13.0
