--- a/asoo.yml
+++ b/asoo.yml
@@ -21,6 +21,7 @@ server_setup:
       - 'curl -fsSL get.docker.com -o get-docker.sh'
       - 'sh get-docker.sh'
       - 'rm get-docker.sh'
+      - 'systemctl enable docker'
   docker-compose:
     sudo: true
     commands:
