--- a/.gitmodules
+++ b/.gitmodules
@@ -154,3 +154,7 @@
 	path = addons/enterprise
 	url = git@github.com:Aselcis-Consulting/enterprise.git
 	branch = 10.0
+[submodule "addons/Aselcis-Consulting/asoo-tools"]
+	path = addons/Aselcis-Consulting/asoo-tools
+	url = https://github.com/Aselcis-Consulting/asoo-tools.git
+	branch = 10.0
