--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,7 +1,7 @@
 [options]
 
 # BASE ODOO
-addons_path = /mnt/Aselcis-Consulting/asoo-tools,/mnt/enterprise,/mnt/extra-addons,/mnt/OCA/account-analytic,/mnt/OCA/account-closing,/mnt/OCA/account-financial-reporting,/mnt/OCA/account-financial-tools,/mnt/OCA/account-invoice-reporting,/mnt/OCA/account-invoicing,/mnt/OCA/account-payment,/mnt/OCA/account-reconcile,/mnt/OCA/bank-payment,/mnt/OCA/bank-statement-import,/mnt/OCA/commission,/mnt/OCA/connector,/mnt/OCA/credit-control,/mnt/OCA/crm,/mnt/OCA/event,/mnt/OCA/hr,/mnt/OCA/l10n-spain,/mnt/OCA/manufacture,/mnt/OCA/multi-company,/mnt/OCA/partner-contact,/mnt/OCA/pos,/mnt/OCA/product-attribute,/mnt/OCA/product-variant,/mnt/OCA/project,/mnt/OCA/purchase-workflow,/mnt/OCA/queue,/mnt/OCA/reporting-engine,/mnt/OCA/sale-reporting,/mnt/OCA/sale-workflow,/mnt/OCA/server-tools,/mnt/OCA/server-ux,/mnt/OCA/social,/mnt/OCA/stock-logistics-barcode,/mnt/OCA/stock-logistics-reporting,/mnt/OCA/stock-logistics-warehouse,/mnt/OCA/stock-logistics-workflow,/mnt/OCA/timesheet,/mnt/OCA/web
+addons_path = /mnt/Aselcis-Consulting/asoo-tools,/mnt/enterprise,/mnt/extra-addons,/mnt/OCA/account-analytic,/mnt/OCA/account-closing,/mnt/OCA/account-financial-reporting,/mnt/OCA/account-financial-tools,/mnt/OCA/account-invoice-reporting,/mnt/OCA/account-invoicing,/mnt/OCA/account-payment,/mnt/OCA/account-reconcile,/mnt/OCA/bank-payment,/mnt/OCA/bank-statement-import,/mnt/OCA/commission,/mnt/OCA/connector,/mnt/OCA/credit-control,/mnt/OCA/crm,/mnt/OCA/event,/mnt/OCA/hr,/mnt/OCA/l10n-spain,/mnt/OCA/manufacture,/mnt/OCA/multi-company,/mnt/OCA/partner-contact,/mnt/OCA/pos,/mnt/OCA/product-attribute,/mnt/OCA/product-variant,/mnt/OCA/project,/mnt/OCA/purchase-workflow,/mnt/OCA/queue,/mnt/OCA/reporting-engine,/mnt/OCA/sale-workflow,/mnt/OCA/server-tools,/mnt/OCA/server-ux,/mnt/OCA/social,/mnt/OCA/stock-logistics-barcode,/mnt/OCA/stock-logistics-reporting,/mnt/OCA/stock-logistics-warehouse,/mnt/OCA/stock-logistics-workflow,/mnt/OCA/timesheet,/mnt/OCA/web,/mnt/OCA/community-data-files
 data_dir = /var/lib/odoo
 admin_passwd = ${password('odoo')}
 csv_internal_sep = ,
@@ -22,7 +22,7 @@ limit_request = 8192
 limit_time_cpu = 8600
 limit_time_real = 8600
 limit_time_real_cron = -1
-workers = 0
+workers = 3
 max_cron_threads = 2
 
 # LOGGING
