--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,7 +1,7 @@
 [options]
 
 # BASE ODOO
-addons_path = /mnt/Aselcis-Consulting/asoo-tools,/mnt/enterprise,/mnt/extra-addons,/mnt/OCA/account-financial-tools,/mnt/OCA/account-payment,/mnt/OCA/bank-statement-import,/mnt/OCA/l10n-spain,/mnt/OCA/queue,/mnt/OCA/server-tools,/mnt/OCA/server-ux,/mnt/OCA/web,/mnt/OCA/community-data-files
+addons_path = /mnt/enterprise,/mnt/extra-addons
 data_dir = /var/lib/odoo
 admin_passwd = ${password('odoo')}
 csv_internal_sep = ,
